수정: front(홈) 화면 UI수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@
         <h3>나의 팀</h3>
         <div class="mt-3 border rounded bg-secondary bg-gradient">
             <!--                <div class="d-flex flex-wrap">-->
-            <div class="row">
+            <div class="row m-0">
                 <div th:if="${myTeams.getTotalElements()} == 0" class="text-center m-3">
                     <h2 class="text-light">지금 팀을 만들고 멘토링에 참여해보세요!</h2>
                     <button type="button" class="btn btn-primary" onclick="location.href='/set_time'">멘티 신청</button>
