수정: #194 종료시간의 00:00을 24:00로 표시 변경 (적용 페이지 확대) (#213)
* 수정: #194 종료시간의 00:00을 24:00로 표시 변경 (적용 페이지 확대)

* 수정: front(홈) 화면 UI수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,8 +51,9 @@
                     <td>
                         <span th:text="${#temporals.format(team.startTime, 'HH:mm')}">시작시간</span>
                         ~
-                        <span th:text="${#temporals.format(team.endTime, 'HH:mm')}">종료시간</span>
-                    </td>
+                        <span th:if="${#temporals.format(team.endTime, 'HH:mm')} == '00:00'">24:00</span>
+                        <span th:unless="${#temporals.format(team.endTime, 'HH:mm')} == '00:00'"
+                              th:text="${#temporals.format(team.endTime, 'HH:mm')}">종료시간</span></td>
                     <td th:text="${team.maxMemberCount}">3</td>
                     <td th:text="${team.currentMemberCount}">2</td>
                     <td th:text="${team.maxMemberCount - team.currentMemberCount}">1</td>
@@ -73,7 +74,7 @@
         <h3>나의 팀</h3>
         <div class="mt-3 border rounded bg-secondary bg-gradient">
             <!--                <div class="d-flex flex-wrap">-->
-            <div class="row">
+            <div class="row m-0">
                 <div th:if="${myTeams.getTotalElements()} == 0" class="text-center m-3">
                     <h2 class="text-light">지금 팀을 만들고 멘토링에 참여해보세요!</h2>
                     <button type="button" class="btn btn-primary" onclick="location.href='/set_time'">멘티 신청</button>
@@ -130,7 +131,9 @@
                     <td>
                         <span th:text="${#temporals.format(team.startTime, 'HH:mm')}">시작시간</span>
                         ~
-                        <span th:text="${#temporals.format(team.endTime, 'HH:mm')}">종료시간</span>
+                        <span th:if="${#temporals.format(team.endTime, 'HH:mm')} == '00:00'">24:00</span>
+                        <span th:unless="${#temporals.format(team.endTime, 'HH:mm')} == '00:00'"
+                              th:text="${#temporals.format(team.endTime, 'HH:mm')}">종료시간</span>
                     </td>
                     <td th:text="${team.maxMemberCount}">3</td>
                     <td th:text="${team.currentMemberCount}">2</td>
