추가: #216 사용자 가이드 버튼 추가

--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -16,8 +16,16 @@
                 <a class="btn btn-outline-secondary btn-floating m-1"
                    href="https://github.com/innovationacademy-kr/swlabs-helper/issues"
                    role="button">
-                    <i class="bi bi-pencil-square"></i>이슈 제보하기
+                    <i class="bi bi-pencil-square"></i> 이슈 제보하기
                 </a>
+
+                <a class="btn btn-outline-secondary btn-floating m-1"
+                   href="https://bit.ly/3hy02ya"
+                   role="button">
+                    <i class="bi bi-info-circle"></i> 가이드
+                </a>
+
+
             </section>
         </div>
         <!-- Grid container -->
