EDIT: #197 #200 #211 배포전 기능 전체 수정
EDIT: 명칭 변경에 따른 page 명칭 수정
EDIT: #197 modal 창의 어색한 명칭 변경
ADD: #200 team_matching_modal 추가
EDIT: #211 코로나 4단계로 인한 장소 선택 제한

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -32,12 +32,12 @@
                    th:classappend="${currentPage} == 'index' ? 'active' : '' ">홈</a>
             </li>
             <li class="nav-item">
-                <a href="/set_time" class="nav-link"
-                   th:classappend="${currentPage} == 'set_time' ? 'active' : '' ">멘티 신청</a>
+                <a href="/mentee" class="nav-link"
+                   th:classappend="${currentPage} == 'mentee' ? 'active' : '' ">멘티 신청</a>
             </li>
             <li class="nav-item">
-                <a href="/create_team" class="nav-link"
-                   th:classappend="${currentPage} == 'create_team' ? 'active' : '' ">멘토 신청</a>
+                <a href="/mentor" class="nav-link"
+                   th:classappend="${currentPage} == 'mentor' ? 'active' : '' ">멘토 신청</a>
             </li>
             <li class="nav-item">
                 <a href="/list_team" class="nav-link"
