FIX: #195 매칭 도중 상관없음 선택 금지
FIX: js 상에서 해당 동작시 알람 출력 및 submit 미전송

--- a/src/main/resources/templates/fragment/team_matching_modal.html
+++ b/src/main/resources/templates/fragment/team_matching_modal.html
@@ -208,6 +208,11 @@
             const start_date = date.valueOf() + start;
             const end_date = date.valueOf() + end;
 
+            if (location == 0) {
+                alert("구체적인 장소를 선택해주세요");
+                return;
+            }
+
             $.ajax({
                     type: 'PUT',
                     url: './api/v1/team/' + tm_team.teamId,
