--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -43,5 +43,50 @@
             crossorigin="anonymous"></script>
     <!--jQuery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!--slider plugin -->
+    <!--link : https://github.com/IonDen/ion.rangeSlider-->
+    <!--Plugin JavaScript file-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
+    <!--datepicker plugin-->
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <!--Moment plugin-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script>
+        var locations = undefined;
+
+        function getLocations() {
+            let data;
+            $.ajax({
+                    type: "GET",
+                    url: "./api/v1/team/locations",
+                    data: null,
+                    async: false,
+                    dataType: "JSON",
+                    contentType: 'application/json',
+                    success: (rst) => data = rst.data,
+                    error: (request, status, error) => {
+                        alert("서버에서 데이터 읽기를 실패했습니다.\n" + request.status + "\nmessage: "
+                            + request.responseText + "\nerror:" + error);
+                    }
+                }
+            )
+            return data;
+        }
+
+        function timeToTS(m) {
+            return m.valueOf();
+        }
+
+        function tsToTime(ts) {
+            var m = moment(ts);
+
+            m.toISOString();
+            if (m.hour() == 0 && startDate < ts)
+                return "24:00";
+            else
+                return m.format("HH:mm");
+        }
+    </script>
 </footer>
 </html>
