--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <div layout:fragment="custom-content">
-    <div th:replace="fragment/team_modal :: modal"></div>
+    <div th:replace="fragment/team_viewer_modal :: modal"></div>
     <div th:if="${user == null}">
         <!-- Guest Mode -->
         <div class="p-3 mt-3 border rounded bg-dark bg-gradient">
@@ -79,9 +79,8 @@
                     <h2 class="text-light">지금 팀을 만들고 멘토링에 참여해보세요!</h2>
                     <button type="button" class="btn btn-primary" onclick="location.href='https://bit.ly/3hy02ya'">가이드
                     </button>
-                    <button type="button" class="btn btn-primary" onclick="location.href='/set_time'">멘티 신청</button>
-                    <button type="button" class="btn btn-primary" onclick="location.href='/list_team'">멘토 신청</button>
-
+                    <button type="button" class="btn btn-primary" onclick="location.href='/mentee'">멘티 신청</button>
+                    <button type="button" class="btn btn-primary" onclick="location.href='/mentor'">멘토 신청</button>
                 </div>
                 <div th:each="team : ${myTeams}" class="col-lg-3 col-md-4 col-sm-6 border rounded bg-light">
                     <div class="card-body text-center">
@@ -159,14 +158,14 @@
     </div>
 </div>
 <div layout:fragment="custom-footer">
-    <div th:replace="fragment/team_modal :: script"></div>
+    <div th:replace="fragment/team_viewer_modal :: script"></div>
     <script>
         function onclick_detail_team(team) {
-            team_modal_update({
+            team_viewer_modal_update({
                 team: team,
-                mode: "READONLY_TEAM"
+                mode: "READONLY_OUT"
             });
-            team_modal_show();
+            team_viewer_modal_show();
         }
     </script>
 </div>
