FIX: #219 Index 팀 상세에서 팀 탈퇴 미적용 버그 수정
viewer modal에 값 세팅 중 ajax type을 넘겨주지 않아서 생긴 버그

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -163,6 +163,7 @@
         function onclick_detail_team(team) {
             team_viewer_modal_update({
                 team: team,
+                type: 'DELETE',
                 mode: "READONLY_OUT"
             });
             team_viewer_modal_show();
