--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -24,9 +24,10 @@
     <div class="inquery">
         <div class="row">
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="location.href='/list_team'">모든 팀</button>
-                <button type="button" class="btn btn-outline-primary" onclick="location.href='/list_myteam'">내가 속한 팀
+                <button type="button" class="btn btn-outline-primary" onclick="location.href='/list_myteam'">나의 팀
                 </button>
+                <button type="button" class="btn btn-primary" onclick="location.href='/list_team'">다른 팀</button>
+
             </div>
         </div>
     </div>
