--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -8,20 +8,17 @@
             <section class="mb-4">
                 <!-- Github -->
                 <a class="btn btn-secondary btn-floating m-1"
-                   href="https://github.com/innovationacademy-kr/swlabs-helper"
-                   role="button">
+                   href="https://github.com/innovationacademy-kr/swlabs-helper" target="_blank" role="button">
                     <i class="bi bi-github"></i>
                 </a>
 
                 <a class="btn btn-outline-secondary btn-floating m-1"
-                   href="https://github.com/innovationacademy-kr/swlabs-helper/issues"
-                   role="button">
+                   href="https://github.com/innovationacademy-kr/swlabs-helper/issues" target="_blank" role="button">
                     <i class="bi bi-pencil-square"></i> 이슈 제보하기
                 </a>
 
                 <a class="btn btn-outline-secondary btn-floating m-1"
-                   href="https://bit.ly/3hy02ya"
-                   role="button">
+                   href="https://bit.ly/3hy02ya" target="_blank" role="button">
                     <i class="bi bi-info-circle"></i> 가이드
                 </a>
 
