--- a/src/main/resources/templates/fragment/team_matching_modal.html
+++ b/src/main/resources/templates/fragment/team_matching_modal.html
@@ -101,7 +101,7 @@
                 var m = moment(ts);
 
                 m.toISOString();
-                if (m.hour() == 0 && tm_startDate < ts)
+                if (m.hour() == 0 && m.minute() == 0 && tm_startDate < ts)
                     return "24:00";
                 else
                     return m.format("HH:mm");
