수정: 총 모집 인원을 전체인원으로 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
                     <th scope="col">장소</th>
                     <th scope="col">희망 일자</th>
                     <th scope="col">희망 시간</th>
-                    <th scope="col">총 모집 인원</th>
+                    <th scope="col">전체 인원</th>
                     <th scope="col">현재 인원</th>
                     <th scope="col">남은 인원</th>
                     <th scope="col">담당 멘토</th>
@@ -126,7 +126,7 @@
                     <th scope="col">장소</th>
                     <th scope="col">희망 일자</th>
                     <th scope="col">희망 시간</th>
-                    <th scope="col">총 모집 인원</th>
+                    <th scope="col">전체 인원</th>
                     <th scope="col">현재 인원</th>
                     <th scope="col">남은 인원</th>
                     <th scope="col">담당 멘토</th>
