수정: #210 #224 팀 탈퇴 조건 변경 (#244)
* 수정: 팀 탈퇴 조건 변경

1. 멘토는 탈퇴가 되면 안된다.  READY, FULL, END,,이상의 상황 전부 불가.
2. END 되었을떄 멘토, 멘티는 탈퇴가 되면 안된다.
3. FULL일때 멘티도 팀을 나올 수 있는가?
4. creator 멘티는 나올 수 없다.

* 수정: 불필요한 코드 삭제

--- a/src/main/resources/templates/list_myteam.html
+++ b/src/main/resources/templates/list_myteam.html
@@ -71,11 +71,11 @@
                 <td>
                     <div th:if="${user != null}">
                         <button type="button" class="btn btn-danger"
-                                th:if="${#strings.contains(team.status, 'READY')} and ${team.nicknameByMentor != user.getNickname()}"
+                                th:if="${team.nicknameByMentor != user.getNickname()} and ${team.getNicknameByCreator() != user.getNickname()}"
                                 th:onclick="onclick_modal_alert([[${team}]])">팀 탈퇴
                         </button>
                         <button type="button" class="btn btn-danger"
-                                th:unless="${#strings.contains(team.status, 'READY')} and ${team.nicknameByMentor != user.getNickname()}"
+                                th:unless="${team.nicknameByMentor != user.getNickname()} and ${team.getNicknameByCreator() != user.getNickname()}"
                                 disabled>팀 탈퇴
                         </button>
                     </div>
