탍퇴되었습니다를 탈퇴되었습니다로 수정했습니다.

--- a/src/main/resources/templates/list_myteam.html
+++ b/src/main/resources/templates/list_myteam.html
@@ -123,7 +123,8 @@
             const cancel_btn_text = '취소'
             const submit_btn_text = '탈퇴하기'
 
-            const success_message = "탍퇴되었습니다"
+            const success_message = "" +
+                "탈퇴되었습니다"
             const fail_message = "탈퇴에 실패했습니다"
 
             alert_modal_update({
