--- a/src/main/resources/templates/list_myteam.html
+++ b/src/main/resources/templates/list_myteam.html
@@ -123,8 +123,7 @@
             const cancel_btn_text = '취소'
             const submit_btn_text = '탈퇴하기'
 
-            const success_message = "" +
-                "탈퇴되었습니다"
+            const success_message = "탈퇴되었습니다"
             const fail_message = "탈퇴에 실패했습니다"
 
             alert_modal_update({
