--- a/src/main/resources/templates/mentee.html
+++ b/src/main/resources/templates/mentee.html
@@ -115,6 +115,7 @@
                 ajax_req_info: {
                     url: "./api/v1/team",
                     type: "POST",
+                    success_message: '팀을 생성했습니다',
                     success: function () {
                         window.location.href = '/mentee';
                     },
