--- a/src/main/resources/templates/fragment/team_matching_modal.html
+++ b/src/main/resources/templates/fragment/team_matching_modal.html
@@ -11,7 +11,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="team_matching_modal_title">멘토 팀 생성</h5>
+                <h5 class="modal-title" id="team_matching_modal_title">멘토 등록</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                         aria-label="Close"></button>
             </div>
@@ -76,7 +76,7 @@
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
                 <button type="button" class="btn btn-primary" id="team_matching_modal_btn_submit"
                         onclick="submit_matching_team()">
-                    생성
+                    맨토 등록
                 </button>
             </div>
         </div>
@@ -233,14 +233,14 @@
                     contentType: 'application/json',
                     success: (data) => {
                         if (data.statusCode != 200) {
-                            alert("생성에 실패했습니다.\n" + data.message);
+                            alert("등록에 실패했습니다.\n" + data.message);
                         } else {
-                            alert("등록되었습니다.");
+                            alert('해당 팀에 맨토로 등록되었습니다.');
                             window.location.href = '/mentor';
                         }
                     },
                     error: (request, status, error) => {
-                        alert("서버상의 문제로 실패했습니다.\n" + request.status + "\nmessage: "
+                        alert("서버상의 문제로 실패했습니다.\n 해당 문제가 지속적으로 발생되면 github issue에 제보해주세요.\n" + request.status + "\nmessage: "
                             + request.responseText + "\nerror:" + error);
                     }
                 }
