--- a/src/main/resources/templates/mentor.html
+++ b/src/main/resources/templates/mentor.html
@@ -119,6 +119,7 @@
                 ajax_req_info: {
                     url: "./api/v1/team",
                     type: "POST",
+                    success_message: '해당 팀에 맨토로 등록되었습니다.',
                     success: function () {
                         window.location.href = '/mentor';
                     },
