추가: #255 모달창 가이드 링크 추가

--- a/src/main/resources/templates/fragment/team_matching_modal.html
+++ b/src/main/resources/templates/fragment/team_matching_modal.html
@@ -11,7 +11,13 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="team_matching_modal_title">멘토 등록</h5>
+                <h5 class="modal-title" id="team_matching_modal_title">
+                    <span class="align-middle">멘토 등록</span>
+                    <a class="btn btn-primary btn-floating"
+                       href="https://bit.ly/3injgpA" target="_blank" role="button">
+                        <i class="bi bi-question-circle"></i>
+                    </a>
+                </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                         aria-label="Close"></button>
             </div>
