--- a/src/main/resources/templates/fragment/team_create_modal.html
+++ b/src/main/resources/templates/fragment/team_create_modal.html
@@ -11,7 +11,14 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="team_create_modal_title"></h5>
+                <h5 class="modal-title">
+                    <span id="team_create_modal_title" class="align-middle"></span>
+                    <a id="team_create_modal_help"
+                       class="btn btn-primary btn-floating"
+                       href="#" target="_blank" role="button">
+                        <i class="bi bi-question-circle"></i>
+                    </a>
+                </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                         aria-label="Close"></button>
             </div>
@@ -181,14 +188,16 @@
             $('#tc_input_max_member_count').val(2);
         }
 
-        var isMentorCreate = 0;
+        var is_mentor_create = 0;
 
         function set_team_create_modal_mode(mode) {
             if (mode == "CREATE_TEAMWISH_MENTEE") {
                 $('#team_create_modal_title').text('멘티 팀 생성');
+                $('#team_create_modal_help').attr("href", "https://bit.ly/3z399Nd");
             } else if (mode == "CREATE_TEAMWISH_MENTOR") {
                 $('#team_create_modal_title').text('멘토 팀 생성');
-                isMentorCreate = 1;
+                $('#team_create_modal_help').attr("href", "https://bit.ly/3injgpA");
+                is_mentor_create = 1;
             }
         }
 
@@ -213,7 +222,7 @@
                 return;
             }
 
-            if (isMentorCreate == 1) {
+            if (is_mentor_create == 1) {
                 var before_alert_message = confirm("멘토로써 팀을 생성하면 멘토는 탈퇴할 수 없습니다.\n그래도 계속 하시겠습니까?")
                 if (before_alert_message != true)
                     return;
@@ -248,7 +257,7 @@
                             alert("생성에 실패했습니다.\n" + data.message);
                         } else {
                             alert(tc_ajax_req_info.success_message);
-                            isMentorCreate = 0;
+                            is_mentor_create = 0;
                             tc_ajax_req_info.success();
                         }
                     },
