--- a/src/main/resources/templates/fragment/team_viewer_modal.html
+++ b/src/main/resources/templates/fragment/team_viewer_modal.html
@@ -62,8 +62,14 @@
                     </div>
                     <div class="row">
                         <div class="demo__body py-3">
+                            <label class="mb-3">시간</label>
                             <input id="tv_input_time_rangeslider" type="text">
                         </div>
+                    </div>
+                    <div class="mb-3">
+                        <hr/>
+                        <label for="tv_pre_description" class="form-label">설명</label>
+                        <pre id="tv_pre_description"></pre>
                     </div>
                 </form>
                 <div class="members_in_team">
@@ -172,6 +178,7 @@
             $('#tv_input_datepicker').val(moment(team.startTime).format('YYYY-MM-DD'));
             $('#tv_input_max_member_count').val(team.maxMemberCount);
             $('#tv_create_team_form').attr('team_id', team.teamId);
+            $('#tv_pre_description').text(team.description);
 
             $.ajax({
                     type: 'GET',
@@ -201,6 +208,7 @@
                         (member.memberRole == "멘토" || member.creator));
                 });
                 if (rst) {
+                    $('#tv_team_viewer_modal_btn_submit').text('팀 삭제');
                     $('#tv_team_viewer_modal_btn_submit').attr('disabled', 'disabled');
                 }
             }
