추가: #256 모달창에서 프로필을 바로 조회할 수 있는 링크 추가 (#260)

--- a/src/main/resources/templates/fragment/team_matching_modal.html
+++ b/src/main/resources/templates/fragment/team_matching_modal.html
@@ -153,10 +153,14 @@
             $memberList.empty();
             team.members.forEach((member) => {
                 if (member.memberRole == "멘토") {
-                    $memberList.append('<li class="list-group-item">' + member.nickname + '' +
-                        ' <span class="rounded-pill bg-danger text-light p-1" style="font-size: 0.85em">멘토</span> </li>');
+                    $memberList.append('<li class="list-group-item">' +
+                        '<a class="text-dark" href="https://profile.intra.42.fr/users/' + member.nickname + '">' + member.nickname + '</a>' +
+                        ' <span class="rounded-pill bg-danger text-light p-1" style="font-size: 0.85em">멘토</span>' +
+                        '</li>');
                 } else {
-                    $memberList.append('<li class="list-group-item">' + member.nickname + '</li>');
+                    $memberList.append('<li class="list-group-item">' +
+                        '<a class="text-dark" href="https://profile.intra.42.fr/users/' + member.nickname + '">' + member.nickname + '</a>' +
+                        '</li>');
                 }
             })
 
